--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 node_modules/
 package-lock.json
 yarn.lock
+pnpm-lock.yaml
 
 # Environment variables
 .env
@@ -10,31 +11,33 @@ yarn.lock
 .env.production
 .env.development
 
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-.pnpm-debug.log*
-
-# Database files (if using local DB)
-*.db
-*.sqlite
-*.sqlite3
-data/
-
-# Build outputs
-dist/
-build/
-
-# Cache
-.cache/
-
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+.DS_Store
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Build outputs
+dist/
+build/
+out/
+.next/
+.vercel/
+
+# Cache
+.cache/
+.parcel-cache/
+.turbo/
 
 # OS
 .DS_Store
@@ -45,7 +48,19 @@ desktop.ini
 *.tmp
 *.temp
 *.bak
+*.backup
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
 # Coverage
 coverage/
 .nyc_output/
+
+# Misc
+*.pem
+*.key
+*.cert
+
