--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -1,58 +1,39 @@
 # Dependencies
 node_modules/
 package-lock.json
-yarn.lock
-pnpm-lock.yaml
 
 # Environment variables
 .env
 .env.local
 .env.*.local
-.env.production
-.env.development
 
-# Next.js
-.next/
-out/
-.vercel/
-.vercel.json
+# Hardhat files
+cache/
+artifacts/
+typechain-types/
+typechain/
+coverage/
+coverage.json
 
 # Build outputs
-dist/
 build/
-
-# Cache
-.cache/
-.parcel-cache/
-.turbo/
+dist/
 
 # Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-.pnpm-debug.log*
-
-# Testing
-coverage/
-.nyc_output/
-.jest/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
 Thumbs.db
-desktop.ini
 
 # Temporary files
 *.tmp
 *.temp
-*.bak
-
-# Debug
-.vscode-test/
