--- a/vault-kpi/.gitignore
+++ b/vault-kpi/.gitignore
@@ -16,12 +16,6 @@ npm-debug.log*
 yarn-debug.log*
 .pnpm-debug.log*
 
-# Database files (if using local DB)
-*.db
-*.sqlite
-*.sqlite3
-data/
-
 # Build outputs
 dist/
 build/
@@ -49,3 +43,10 @@ desktop.ini
 # Coverage
 coverage/
 .nyc_output/
+
+# Output files (if generated)
+*.csv
+*.xlsx
+*.json
+!package.json
+!package-lock.json
