--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@lagoon-protocol/v0-viem": "^0.1.0",
     "@lagoon-protocol/v0-core": "^0.1.0",
+    "@lagoon-protocol/v0-viem": "^0.1.0",
+    "@lifi/sdk": "^3.15.4",
     "@rainbow-me/rainbowkit": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
     "next": "^14.0.0",
@@ -31,4 +32,3 @@
     "typescript": "^5.0.0"
   }
 }
-
