--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,26 @@
 # Dependencies
 node_modules/
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
 
-# Environment variables
+# Environment files
 .env
 .env.local
 .env.*.local
-.env.production
-.env.development
-.env*.local
-*.env
-.env.example
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
 
 # Logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
 
-# Build outputs
-dist/
-build/
-out/
-.next/
-.vercel/
+# IDE
+.vscode/
+.idea/
 
-# Cache
-.cache/
-.parcel-cache/
-.turbo/
+# Claude Code
+.claude/
 
 # OS
 .DS_Store
 Thumbs.db
-desktop.ini
 
-# Temporary files
-*.tmp
-*.temp
-*.bak
-*.backup
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Coverage
-coverage/
-.nyc_output/
-
-# Misc
-*.pem
-*.key
-*.cert
-
-
-.claude
+# Build outputs
+dist/
+build/
