--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,60 +1,29 @@
 # Dependencies
 node_modules/
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-.env.production
-.env.development
-.env*.local
-*.env
 
 # Next.js
 .next/
 out/
-.vercel/
-.vercel.json
 
-# Build outputs
-dist/
-build/
-
-# Cache
-.cache/
-.parcel-cache/
-.turbo/
+# Environment
+.env
+.env.local
+.env.*.local
 
 # Logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-.pnpm-debug.log*
-
-# Testing
-coverage/
-.nyc_output/
-.jest/
 
 # IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
 
 # OS
 .DS_Store
 Thumbs.db
-desktop.ini
 
-# Temporary files
-*.tmp
-*.temp
-*.bak
+# TypeScript
+*.tsbuildinfo
 
-# Debug
-.vscode-test/
+# Vercel
+.vercel
