--- a/indexer/.gitignore
+++ b/indexer/.gitignore
@@ -1,51 +1,13 @@
 # Dependencies
 node_modules/
-package-lock.json
-yarn.lock
 
-# Environment variables
+# Environment
 .env
 .env.local
-.env.*.local
-.env.production
-.env.development
 
 # Logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-.pnpm-debug.log*
 
-# Database files (if using local DB)
+# Database
 *.db
 *.sqlite
-*.sqlite3
-data/
-
-# Build outputs
-dist/
-build/
-
-# Cache
-.cache/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Temporary files
-*.tmp
-*.temp
-*.bak
-
-# Coverage
-coverage/
-.nyc_output/
