--- a/vault-kpi/.gitignore
+++ b/vault-kpi/.gitignore
@@ -1,52 +1,14 @@
-# Dependencies
-node_modules/
-package-lock.json
-yarn.lock
-
-# Environment variables
+# Environment (API keys, secrets)
 .env
 .env.local
 .env.*.local
-.env.production
-.env.development
+
+# Dependencies
+node_modules/
 
 # Logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-.pnpm-debug.log*
-
-# Build outputs
-dist/
-build/
-
-# Cache
-.cache/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
 
 # OS
 .DS_Store
-Thumbs.db
-desktop.ini
-
-# Temporary files
-*.tmp
-*.temp
-*.bak
-
-# Coverage
-coverage/
-.nyc_output/
-
-# Output files (if generated)
-*.csv
-*.xlsx
-*.json
-!package.json
-!package-lock.json
